--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/source-sans-pro": "^5.0.8",
+    "@fontsource/tektur": "^5.0.4",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
