chore: add axios

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/source-sans-pro": "^5.0.8",
     "@fontsource/tektur": "^5.0.4",
+    "axios": "^1.6.7",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
